--- a/package.json
+++ b/package.json
@@ -4,13 +4,19 @@
   "description": "Send tweet ahead of CFC's match",
   "main": "index.js",
   "dependencies": {
+    "@types/express": "^4.17.13",
     "axios": "0.27.2",
+    "body-parser": "^1.20.0",
     "crypto": "^1.0.1",
     "dotenv": "^16.0.1",
-    "oauth-1.0a": "^2.2.6"
+    "express": "^4.18.1",
+    "oauth-1.0a": "^2.2.6",
+    "ts-node-dev": "^1.0.0-pre.30"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "tsc": "tsc",
+    "dev": "ts-node-dev --respawn --transpileOnly ./app/app.ts",
+    "prod": "tsc && node ./build/app.js"
   },
   "author": "",
   "license": "ISC",
