--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "oauth-1.0a": "^2.2.6",
-    "ts-node-dev": "^1.0.0-pre.30"
+    "ts-node-dev": "^2.0.0"
   },
   "scripts": {
-    "tsc": "tsc",
-    "dev": "ts-node-dev --respawn app/app.ts",
+    "build": "tsc",
     "prod": "tsc && node ./build/app.js",
+    "match-fetcher": "ts-node-dev ./jobs/match-fetcher.ts",
+    "match-reader": "ts-node-dev ./jobs/match-reader.ts",
     "lint": "eslint ./**/*.ts"
   },
   "author": "",
