--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "ioredis": "^5.1.0",
     "oauth-1.0a": "^2.2.6",
     "ts-node-dev": "^2.0.0"
   },
