feat: inject env in all starter apps

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "prod": "tsc && node ./build/app.js",
     "match-fetcher": "ts-node-dev ./jobs/match-fetcher.ts",
     "match-reader": "ts-node-dev ./jobs/match-reader.ts",
-    "pub": "ts-node-dev ./events/pub.ts",
+    "pub": "ts-node-dev --respawn --exit-child --watch src events/pub.ts",
     "sub": "ts-node-dev ./events/sub.ts",
     "lint": "eslint ./**/*.ts"
   },
