feat: inject envs in all remaining file starters

--- a/package.json
+++ b/package.json
@@ -23,6 +23,11 @@
     "sub": "ts-node-dev ./events/sub.ts",
     "lint": "eslint ./**/*.ts"
   },
+  "husky": {
+    "hooks": {
+        "pre-push": "npm run lint"
+    }
+  },  
   "author": "",
   "license": "ISC",
   "devDependencies": {
