--- a/.gitignore
+++ b/.gitignore
@@ -13,9 +13,6 @@ logs
 results
 tmp
 
-# Build
-public/css/main.css
-
 # Coverage reports
 coverage
 
@@ -51,3 +48,6 @@ yarn.lock
 
 # dummy data
 dummies/
+
+# script files
+*.sh
