style: add prettier

--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
   },
   "husky": {
     "hooks": {
-        "pre-push": "npm run lint"
+      "pre-push": "npm run lint"
     }
-  },  
+  },
   "author": "",
   "license": "ISC",
   "devDependencies": {
@@ -32,6 +32,7 @@
     "@typescript-eslint/eslint-plugin": "^5.30.0",
     "@typescript-eslint/parser": "^5.30.0",
     "eslint": "^8.18.0",
-    "husky": "^4.2.5"
+    "husky": "^4.2.5",
+    "prettier": "2.7.1"
   }
 }
