--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "sub": "ts-node-dev ./events/sub.ts",
     "lint": "eslint ./**/*.ts"
   },
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
+  },
   "husky": {
     "hooks": {
       "pre-push": "npm run lint"
@@ -32,7 +35,8 @@
     "@typescript-eslint/eslint-plugin": "^5.30.0",
     "@typescript-eslint/parser": "^5.30.0",
     "eslint": "^8.18.0",
-    "husky": "^4.2.5",
+    "husky": "^4.3.8",
+    "lint-staged": "^13.0.3",
     "prettier": "2.7.1"
   }
 }
