--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-push": "npm run lint"
+      "pre-commit": "prettier --write --ignore-unknown"
     }
   },
   "author": "",
