fix prettier command

--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "pub": "ts-node-dev --respawn --exit-child --watch src events/pub.ts",
     "sub": "ts-node-dev ./events/sub.ts",
     "lint": "eslint ./**/*.ts",
-    "format": "prettier --config .prettierrc.json --write '*.ts'"
+    "format": "prettier --config .prettierrc.json --write './**/*.ts'"
   },
   "husky": {
     "hooks": {
-        "pre-commit": "npm run format"
+      "pre-commit": "npm run format"
     }
   },
   "author": "",
