--- a/package.json
+++ b/package.json
@@ -19,21 +19,27 @@
     "pub": "ts-node-dev --respawn --exit-child --watch src events/pub.ts",
     "sub": "ts-node-dev ./events/sub.ts",
     "lint": "eslint ./**/*.ts",
-    "format": "prettier --config .prettierrc.json --write './**/*.ts'"
+    "format": "prettier --config .prettierrc.json --write './**/*.ts'",
+    "test": "jest ./**/*.test.ts"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run format"
+      "pre-commit": "npm run format",
+      "pre-push": "npm run test"
     }
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/preset-env": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
+    "@types/jest": "^28.1.4",
     "@types/node": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.30.0",
     "@typescript-eslint/parser": "^5.30.0",
     "eslint": "^8.18.0",
     "husky": "^4.3.8",
+    "jest": "^28.1.2",
     "lint-staged": "^13.0.3",
     "prettier": "2.7.1"
   }
