--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "husky": "^4.3.8",
     "jest": "^28.1.2",
     "lint-staged": "^13.0.3",
-    "prettier": "2.7.1"
+    "prettier": "2.7.1",
+    "typescript": "^4.6.2"
   }
 }
