--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-push": "npm run test"
+      "pre-push": "npm run lint && npm run test"
     }
   },
   "author": "",
