--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "jest": "^28.1.2",
     "lint-staged": "^13.0.3",
     "prettier": "2.7.1",
+    "ts-jest": "^28.0.5",
     "typescript": "^4.6.2"
   }
 }
