fix(ts-node-dev): resolve hot-reload not working

--- a/package.json
+++ b/package.json
@@ -13,11 +13,10 @@
   },
   "scripts": {
     "build": "tsc",
-    "prod": "tsc && node ./build/app.js",
-    "match-fetcher": "ts-node-dev ./jobs/match-fetcher.ts",
-    "match-reader": "ts-node-dev ./jobs/match-reader.ts",
-    "pub": "ts-node-dev --respawn --exit-child --watch src events/pub.ts",
-    "sub": "ts-node-dev ./events/sub.ts",
+    "match-fetcher": "ts-node-dev --poll --transpile-only --respawn jobs/match-fetcher.ts",
+    "match-reader": "ts-node-dev --poll --transpile-only --respawn jobs/match-reader.ts",
+    "pub": "ts-node-dev --poll --transpile-only --respawn events/pub.ts",
+    "sub": "ts-node-dev --poll --transpile-only --respawn events/sub.ts",
     "lint": "eslint ./**/*.ts",
     "format": "prettier --config .prettierrc --write './**/*.ts'",
     "test": "jest ./**/*.test.ts"
