--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
   },
   "scripts": {
     "build": "tsc",
-    "match-fetcher": "ts-node-dev --poll --transpile-only --respawn jobs/match-fetcher.ts",
-    "match-reader": "ts-node-dev --poll --transpile-only --respawn jobs/match-reader.ts",
-    "pub": "ts-node-dev --poll --transpile-only --respawn events/pub.ts",
-    "sub": "ts-node-dev --poll --transpile-only --respawn events/sub.ts",
+    "match-fetcher": "ts-node-dev --poll --transpile-only --respawn jobs/match-fetcher.ts --watch **/*.ts",
+    "match-reader": "ts-node-dev --poll --transpile-only --respawn jobs/match-reader.ts --watch **/*.ts",
+    "pub": "ts-node-dev --poll --transpile-only --respawn events/pub.ts --watch **/*.ts",
+    "sub": "ts-node-dev --poll --transpile-only --respawn events/sub.ts --watch **/*.ts",
     "lint": "eslint ./**/*.ts",
     "format": "prettier --config .prettierrc --write './**/*.ts'",
     "test": "jest ./**/*.test.ts"
