--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.0.1",
     "ioredis": "^5.1.0",
+    "moment": "^2.29.4",
+    "moment-parseformat": "^4.0.0",
     "oauth-1.0a": "^2.2.6",
     "ts-node-dev": "^2.0.0"
   },
