test: run worker

--- a/package.json
+++ b/package.json
@@ -23,11 +23,10 @@
     "match-fetcher": "ts-node-dev --poll --transpile-only --respawn jobs/match-fetcher.ts --watch **/*.ts",
     "match-reader": "ts-node-dev --poll --transpile-only --respawn jobs/match-reader.ts --watch **/*.ts",
     "sub": "ts-node-dev --poll --transpile-only --respawn events/sub.ts --watch **/*.ts",
+    "sub-js": "node build/events/sub.js",
     "lint": "eslint ./**/*.ts",
     "format": "prettier --config .prettierrc --write './**/*.ts'",
-    "test": "jest ./**/*.test.ts",
-    "start": "pm2-runtime start ecosystem.config.js --env production",
-    "preinstall": "npm i -g pm2 && pm2 install pm2-logrotate"
+    "test": "jest ./**/*.test.ts"
   },
   "husky": {
     "hooks": {
