feat(email-notif): add initial job and email notif integration

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@
 env='local' # local or production
 
 REDIS_URL='redis://:<password>@<hostname>:<port>/<dbname>'
+ELASTIC_EMAIL_BASE_URL='https://api.elasticemail.com/v4'
+ELASTIC_EMAIL_API_KEY='xyz'
