--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "subscriber-js": "node build/events/subscriber.js",
     "lint": "eslint ./**/*.ts",
     "format": "prettier --config .prettierrc --write './**/*.ts'",
-    "test": "jest ./**/*.test.ts"
+    "test": "jest ./**/*.test.ts",
+    "test:match-fetcher": "jest ./jobs/match-fetcher.test.ts"
   },
   "husky": {
     "hooks": {
@@ -39,11 +40,14 @@
     "@babel/preset-env": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
     "@jest/reporters": "^28.1.2",
+    "@types/express": "^4.17.21",
     "@types/jest": "^28.1.4",
     "@types/node": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.30.0",
     "@typescript-eslint/parser": "^5.30.0",
+    "body-parser": "^1.20.2",
     "eslint": "^8.18.0",
+    "express": "^4.19.2",
     "husky": "^4.3.8",
     "jest": "^28.1.2",
     "lint-staged": "^13.0.3",
