--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "lint": "eslint ./**/*.ts",
     "format": "prettier --config .prettierrc --write './**/*.ts'",
     "test": "jest ./**/*.test.ts",
-    "test:match-fetcher": "jest ./jobs/match-fetcher.test.ts"
+    "test:match-fetcher": "jest --detectOpenHandles ./jobs/match-fetcher.test.ts"
   },
   "husky": {
     "hooks": {
@@ -43,6 +43,7 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^28.1.4",
     "@types/node": "^18.0.0",
+    "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^5.30.0",
     "@typescript-eslint/parser": "^5.30.0",
     "body-parser": "^1.20.2",
@@ -52,6 +53,7 @@
     "jest": "^28.1.2",
     "lint-staged": "^13.0.3",
     "prettier": "2.7.1",
+    "supertest": "^7.0.0",
     "ts-jest": "^28.0.5",
     "typescript": "^4.6.2"
   }
