--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,3 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
 name: Unit and integration test
 
 on:
@@ -11,13 +8,22 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
+
+    services:
+      redis:
+        image: redis:alpine
+        ports:
+          - 6379:6379
+        options: >-
+          --health-cmd "redis-cli ping"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 3
 
     strategy:
       matrix:
         node-version: [16.x, 18.x, 20.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
     - uses: actions/checkout@v3
@@ -27,5 +33,22 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm ci
+
+    - name: Wait for Redis to be ready
+      run: |
+        for i in {1..10}; do
+          if nc -z localhost 6379; then
+            echo "Redis is ready"
+            break
+          fi
+          echo "Waiting for Redis..."
+          sleep 2
+        done
+
+    - name: Set up environment variables
+      run: echo "REDIS_URL=redis://localhost:6379" >> $GITHUB_ENV
+
     - run: npm run build --if-present
     - run: npm test
+      env:
+        REDIS_URL: redis://localhost:6379
