fix(package): add npm version

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "ts-node-dev": "^2.0.0"
   },
   "engines": {
-    "node": "20.x"
+    "node": "20.x",
+    "npm": "9.x"
   },
   "scripts": {
     "build": "tsc",
