--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "subscriber-js": "node build/events/subscriber.js",
     "lint": "eslint ./**/*.ts",
     "format": "prettier --config .prettierrc --write './**/*.ts'",
-    "test": "jest --detectOpenHandles ./**/*.test.ts",
-    "test:subscriber": "jest --detectOpenHandles ./events/subscriber.test.ts"
+    "test": "jest --detectOpenHandles ./**/*.test.ts"
   },
   "husky": {
     "hooks": {
