--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "husky": {
     "hooks": {
+      "pre-commit": "npm run format",
       "pre-push": "npm run lint && npm run test"
     }
   },
