temp: add branch to target against for CI test

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,9 +2,9 @@ name: Unit and integration test
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "refactor/base-fix-duplicated-tweets" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "main", "refactor/base-fix-duplicated-tweets" ]
 
 jobs:
   build:
