--- a/package.json
+++ b/package.json
@@ -25,15 +25,8 @@
     "subscriber": "ts-node-dev --poll --transpile-only --respawn events/subscriber.ts --watch **/*.ts",
     "subscriber-js": "node build/events/subscriber.js",
     "lint": "eslint ./**/*.ts",
-    "format": "prettier --config .prettierrc --write './**/*.ts'",
-    "test": "jest --detectOpenHandles ./**/*.test.ts",
-    "precommit": "lint-staged"
-  },
-  "lint-staged": {
-    "*.ts": [
-      "prettier --write",
-      "git add"
-    ]
+    "format": "sh -c 'prettier --config .prettierrc --write \"${1:-'./**/*.ts'}\"' --",
+    "test": "jest --detectOpenHandles ./**/*.test.ts"
   },
   "husky": {
     "hooks": {
