Refactor/publish reminder with new strategies (#108)
* chore: update prettier format

* update package.json

* update serp API get implementation in http get test

* chore: add optional query of club and location when fetching serp API

* refactor(job): fetch using env variables and add guard for converting date string to date

* test: adjust test for error handling

* refactor: change date calculation

--- a/package.json
+++ b/package.json
@@ -25,12 +25,11 @@
     "subscriber": "ts-node-dev --poll --transpile-only --respawn events/subscriber.ts --watch **/*.ts",
     "subscriber-js": "node build/events/subscriber.js",
     "lint": "eslint ./**/*.ts",
-    "format": "prettier --config .prettierrc --write './**/*.ts'",
+    "format": "sh -c 'prettier --config .prettierrc --write \"${1:-'./**/*.ts'}\"' --",
     "test": "jest --detectOpenHandles ./**/*.test.ts"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run format",
       "pre-push": "npm run lint && npm run test"
     }
   },
